--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./librerias/bootstrap.min.css" />
-    <script src="./librerias/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./librerias/bootstrap.bundle.min.js"></script>
     <title>Vite + React</title>
   </head>
   <body class="d-flex flex-column vh-100">
